# STRATA-E_2

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eval_asfbn.py  eval_extended.py  prep_asfbn.py  pyproject.toml  run_scripts.py
entire_data_201/report/: ctx_scores.csv  drift_scores.csv  freq_scores.csv  seq_scores.csv  strata_report.html  triage.csv
sysmon_pipeline/: __init__.py  analysis.py  cli.py  config.py  debug.py  divergence.py  loaders.py  mapping.py  pairs.py  pipeline.py  report.py  scoring.py  sequence.py
